--- a/Leader/View/Base.lproj/Main.storyboard
+++ b/Leader/View/Base.lproj/Main.storyboard
@@ -923,7 +923,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="I5q-zX-13o">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Anon" translatesAutoresizingMaskIntoConstraints="NO" id="I5q-zX-13o">
                                 <rect key="frame" x="15" y="50" width="175" height="250"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="250" id="Ajj-29-3ZU"/>
@@ -1019,6 +1019,11 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Fro-y1-wJ9">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <view key="tableFooterView" contentMode="scaleToFill" id="PIt-Bg-WrI">
+                                    <rect key="frame" x="0.0" y="99.5" width="375" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="questionCell" id="eZb-DB-sbi" customClass="QuestionCell" customModule="Leader" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
@@ -1078,14 +1083,58 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="eBM-YT-KND">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <view key="tableHeaderView" contentMode="scaleToFill" id="mVL-a3-23Q">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="63"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Question" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MHV-Dy-Kh6">
+                                            <rect key="frame" x="5" y="5" width="365" height="53"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                    <constraints>
+                                        <constraint firstItem="MHV-Dy-Kh6" firstAttribute="leading" secondItem="mVL-a3-23Q" secondAttribute="leading" constant="5" id="1Mh-Jy-hat"/>
+                                        <constraint firstItem="MHV-Dy-Kh6" firstAttribute="top" secondItem="mVL-a3-23Q" secondAttribute="top" constant="5" id="DwJ-OZ-wOI"/>
+                                        <constraint firstAttribute="bottom" secondItem="MHV-Dy-Kh6" secondAttribute="bottom" constant="5" id="LHb-Vx-RJN"/>
+                                        <constraint firstAttribute="trailing" secondItem="MHV-Dy-Kh6" secondAttribute="trailing" constant="5" id="cJk-qc-rCb"/>
+                                    </constraints>
+                                </view>
+                                <view key="tableFooterView" contentMode="scaleToFill" id="L7M-as-ptW">
+                                    <rect key="frame" x="0.0" y="171.5" width="375" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                </view>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Wn8-ZS-Efj">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="qaDetailsCell" id="Wn8-ZS-Efj" customClass="QADetailsCell" customModule="Leader" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="91" width="375" height="52.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Wn8-ZS-Efj" id="Kgj-RD-Pi2">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="52.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FWU-tb-x1S">
+                                                    <rect key="frame" x="20" y="11" width="335" height="30.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="ulQ-jd-0pO"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottomMargin" secondItem="FWU-tb-x1S" secondAttribute="bottom" id="5mI-TS-1eG"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="FWU-tb-x1S" secondAttribute="trailing" constant="5" id="GQy-Hb-NZb"/>
+                                                <constraint firstItem="FWU-tb-x1S" firstAttribute="top" secondItem="Kgj-RD-Pi2" secondAttribute="topMargin" id="bJ4-Q5-8TM"/>
+                                                <constraint firstItem="FWU-tb-x1S" firstAttribute="leading" secondItem="Kgj-RD-Pi2" secondAttribute="leadingMargin" constant="5" id="tae-Yi-NwS"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="label" destination="FWU-tb-x1S" id="79i-cv-Y1y"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -1100,10 +1149,14 @@
                         <viewLayoutGuide key="safeArea" id="LYT-q4-fsY"/>
                     </view>
                     <navigationItem key="navigationItem" id="6y0-Ye-LkM"/>
+                    <connections>
+                        <outlet property="questionLabel" destination="MHV-Dy-Kh6" id="rTB-Sd-lBI"/>
+                        <outlet property="tableView" destination="eBM-YT-KND" id="mFD-Jb-7SX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Var-lk-xik" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3076" y="1334"/>
+            <point key="canvasLocation" x="3076" y="1333.5832083958021"/>
         </scene>
         <!--Naviagation Controller-->
         <scene sceneID="fMc-Eq-vcP">
@@ -1134,6 +1187,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Anon" width="512" height="512"/>
         <image name="BugReport" width="400" height="400"/>
         <image name="Calendar" width="25" height="25"/>
         <image name="FBLA" width="640" height="640"/>
